made giving availabilty usable on mobile and other mobile fixes

--- a/src/app/commonStyles/input.less
+++ b/src/app/commonStyles/input.less
@@ -45,3 +45,9 @@
 		flex-direction: column;
 	}
 }
+
+@media only screen and (max-width: 370px){
+	.data-input {
+    font-size: 0.7em;
+	}
+}
