--- a/src/app/shared/header.less
+++ b/src/app/shared/header.less
@@ -31,11 +31,17 @@ header h1{
 	margin-left: 10px;
 }
 
+  @media only screen and (max-width: 830px){
+		#options{
+			font-size: large;
+		}
+	}
 	@media only screen and (max-width: 635px){
 
 		header h1{
 			font-size: 1.7em;
 		}
+
 
 	}
 
@@ -44,4 +50,16 @@ header h1{
 		header h1{
 			font-size: 1.5em;
 		}
+
+		#options{
+			font-size: small;
+		}
+	}
+
+	@media only screen and (max-width: 375px){
+
+		header h1{
+			font-size: 1.1em;
+		}
+
 	}
